syntax = "proto3";

package common;

option go_package = "protogen/accountservice/proto";

message HealthCheckRequest {
  string message = 1;
}

message HealthCheckResponse {
  string message = 1;
  int64 timestamp = 2;
}